--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 @import "~include-media/dist/_include-media.scss";
 @import "~bootstrap/scss/bootstrap";
 
-/* General
+/* Markdown
 ************************************************************** */
 textarea {
   resize: none;
@@ -15,16 +15,36 @@ textarea {
 #preview {
   overflow-x: hidden;
 }
-.jumbotron {
+/* Calculator
+************************************************************** */
+.calc {
   max-width: 50vw;
 }
 
 /* Media Queries
 ************************************************************** */
-@include media(">=phone", "<=tablet") {
-  .jumbotron {
+@include media(">=phone", "<tablet") {
+  .calc {
     min-width: 100vw;
     margin-top: 1rem;
+    h1 {
+      display: none;
+    }
+  }
+}
+@include media(">=phone", "<desktop", "landscape") {
+  .quotes {
+    margin-top: 8rem;
+  }
+  .drum {
+    margin: 5rem 0 4rem 0;
+    h1 {
+      display: none;
+    }
+  }
+  .calc {
+    min-width: 100vw;
+    margin: 19rem 0 2.5rem 0;
     h1 {
       display: none;
     }
